refactoring e client generato automaticamente
