# swagger.yaml
@@ -110,6 +110,9 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/Product'
+      responses:
+        "200":
+          $ref: '#/responses/productsResponse'
       tags:
       - products
   /products/{id}:
@@ -130,6 +133,30 @@ paths:
         "404":
           $ref: '#/responses/errorResponse'
         "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    get:
+      description: Return a list of products from the database
+      operationId: listSingleProduct
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product,
+          when not specified currency is returned in GBP.
+        in: query
+        name: Currency
+        type: string
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
           $ref: '#/responses/errorResponse'
       tags:
       - products
